# ewatercycle-test-parallelisation

./: README.md  pyproject.toml
docs/: conf.py  example_parallelisation.ipynb  index.rst  requirements.txt
src/ewatercycle_parallelisation_sleep/: model.py
