[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ewatercycle_parallelisation_sleep/__init__.py"

[project]
name = "ewatercycle-parallelisation-sleep"
description = "eWaterCycle plugin to test parallelisation which just sleeps"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "David Haasnoot", email = "davidhaasnoot@gmail.com" },
]
keywords = ["ewatercycle", "hydrology","data assimilation","parallelisation"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
]

# Include here only the dependencies for the eWaterCycle wrapped model
dependencies = [
  "ewatercycle>=2.0.0",
]
dynamic = ["version"]

# This registers the plugin such that it is discoverable by eWaterCycle
[project.entry-points."ewatercycle.models"]
ParallelisationSleep = "ewatercycle_parallelisation_sleep.model:ParallelisationSleep"
